tests/compile-fail/gradient-lifetime.stderr
error[E0597]: `a` does not live long enough
  --> tests/compile-fail/gradient-lifetime.rs:9:9
   |
4  |     let _grad = {
   |         ----- borrow later stored here
5  |         let mut a = Tensor::new([1.0f32, 2.0, 3.0]);
   |             ----- binding `a` declared here
...
9  |         a.gradient().unwrap()
   |         ^ borrowed value does not live long enough
10 |     };
   |     - `a` dropped here while still borrowed
